<resources>
    <string name="app_name">HD Wallpaper</string>
    <string name="home_name">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Amazing Wallpaper in your way</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_gifs">GIFs</string>
    <string name="menu_category">Category</string>
    <string name="menu_myFavorites">My Favorites</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_more_app">More App</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_privacy_police">Privacy Police</string>
    <string name="latest_name">Latest</string>
    <string name="category_name">Category</string>
    <string name="textAbout">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="aboutus_name">About Us</string>
    <string name="favorites_name">My Favorites</string>
    <string name="search">Tìm kiếm...</string>
    <string name="imageDetail_name">Image Detail</string>
</resources>
